--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pymavlink"]
-	path = pymavlink
-	url = https://github.com/ardupilot/pymavlink.git
+[submodule "pymavlink-secured-mavlink"]
+	path = pymavlink-secured-mavlink
+	url = https://github.com/RoundPegInASquareHole/pymavlink-secured-mavlink/
